repaired scrollbars, footer, fixed header after anchor clicked issue

--- a/internal/static/css/styles.css
+++ b/internal/static/css/styles.css
@@ -1,7 +1,6 @@
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
 }
 
 body {
@@ -10,29 +9,7 @@ body {
 }
 
 main::-webkit-scrollbar {
-    width: 12px;
-}
- 
-main::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
-    -webkit-border-radius: 10px;
-    border-radius: 10px;
-}
- 
-main::-webkit-scrollbar-thumb {
-    -webkit-border-radius: 10px;
-    border-radius: 10px;
-    background: #f2f4f6; 
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
-}
-main::-webkit-scrollbar-thumb:window-inactive {
-	background: #f2f4f6;
-}
-
-header {
-    display: flex;
-    background-color: #2a3035;
-    border-bottom: 1px solid #c3c6c8;
+    display: none;
 }
 
 a {
@@ -42,6 +19,60 @@ a {
 
 p {
     margin-bottom: 24px;
+}
+
+header {
+    display: flex;
+    background-color: #2a3035;
+    border-bottom: 1px solid #c3c6c8;
+}
+
+section::-webkit-scrollbar {
+    width: 12px;
+}
+ 
+section::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+}
+ 
+section::-webkit-scrollbar-thumb {
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+    background: #f2f4f6; 
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+}
+
+section::-webkit-scrollbar-thumb:window-inactive {
+	background: #f2f4f6;
+}
+
+
+nav::-webkit-scrollbar {
+    width: 12px;
+}
+ 
+nav::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+}
+ 
+nav::-webkit-scrollbar-thumb {
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+    background: #f2f4f6; 
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+    height:50px;
+}
+
+nav::-webkit-scrollbar-thumb:window-inactive {
+	background: #f2f4f6;
+}
+
+nav {
+    overflow-y: scroll;
 }
 
 
@@ -82,13 +113,9 @@ section > div {
 }
 
 aside {
-    padding-bottom: 100px;
-    height: 100vh;   
-    overflow-y: scroll;
     background-color: #f2f4f6;
     border-right: 1px solid #e9ebee;
 }
-
 
 .table-of-contents {
     color: rgba(92,105,117,1.00);
@@ -351,6 +378,41 @@ color: #56c1f2;;
 }
 
 @media only screen and (min-width: 821px) {
+    body {
+        background-color: #ffffff;
+    }
+
+    .wrapper {
+        display: flex;
+    }
+
+    aside, main {
+        padding-top: 70px;
+    }
+
+    aside {
+        width: max(300px, (100vw - 910px) / 2);
+    }
+
+    nav {
+        height: calc(100vh - 70px);
+    }
+
+    nav > ul > li:last-of-type {
+        margin-bottom: 50px;
+    }
+
+    /* main {
+        height: calc(100vh - 70px);
+    } */
+
+    section {
+        padding-top: 30px;
+        padding-left: 50px;
+        height: calc(100vh - 100px);
+        overflow-y: scroll;
+    }
+
     .centered {
         justify-content: center;
         overflow-x:auto;
@@ -367,7 +429,7 @@ color: #56c1f2;;
         padding-left: 100px;
         height: 70px;
         width: 100vw;
-        position: sticky;
+        position: fixed;
     }
     
     table {
@@ -407,25 +469,6 @@ color: #56c1f2;;
 
     .search > input {
         border: none;
-    }
-
-    body {
-        background-color: #ffffff;
-    }
-
-
-
-    .wrapper {
-        display: grid;
-        grid-template-columns: max(300px, (100vw - 910px) / 2) auto;
-    }
-
-
-
-    section {
-        padding-left: 50px;
-        padding-bottom: 100px;
-        height: 100vh;   
     }
 
     @media (min-width: 1430px) {
@@ -585,6 +628,14 @@ color: #56c1f2;;
         bottom: 0px;
     }
 
+    nav {
+        height: 100vh;
+    }
+
+    nav::-webkit-scrollbar {
+        display: none;
+    }
+
     #menu-blur {
         background-color: rgba(27, 30, 33, 0.77);
         top: 0px;
@@ -658,8 +709,6 @@ color: #56c1f2;;
         padding-right: 16px;
     }
 
-    section div {
-    }
 
     section h1 {
         font-size: 24px;
